# DMN

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  DMN_TECHNICAL_REPORT.md  EU_AI_ACT_COMPLIANCE.md  NOTICE  README.md  RELEASE_NOTES.md  VISION_AND_PHILOSOPHY.md  debug_dream_parser.py  migrate_memory.py  mkdocs.yml  pyproject.toml  requirements.txt  run_brain.sh  verify_brain_architecture.py  verify_consciousness.py  verify_dreamer.py  verify_feedback_loop.py  verify_orchestrator.py  verify_semantic_memory.py
.github/workflows/: ci.yml  publish.yml
data/: dream_vectors.json  dreams.json  long_term_insights.json  model_config.json  short_term_memory.jsonl
data/chroma_db/: chroma.sqlite3
docs/: getting-started.md  ide_setup.md  index.md  llms.txt
docs/api-reference/: addvaluenode.md  clearerrornode.md  llmnode.md  routernode.md  toolnode.md  utilities.md
docs/core-concepts/: 1-philosophy.md  2-architecture.md  3-audit-log.md
docs/guides/: multi-agent-orchestration.md  self-correction-loop.md
examples/: 10_security_firewall.py  11_reward_code_agent.py  12_support_helper_agent.py  13_mini_swarm_pruner.py  1_simple_triage.py  2_rag_researcher.py  3_self_correction.py  4_human_in_the_loop.py  5_parallel_execution.py  6_structured_output.py  7_multi_agent_handoff.py  8_meta_prompt_optimizer.py  9_corporate_swarm.py
logs/: interaction_stream.jsonl
memory/: dreams.json
src/: debug_thalamus.py  test_brain_debug.py
tests/: conftest.py  test_contracts.py  test_dmn_brain.py  test_memory_tiers.py  test_prefrontal.py  verify_pfc.py  verify_retrieval.py
(+43 files in other folders)
