[tool.poetry]
name = "lar-dmn"
version = "2.5.0"
description = "Lár DMN — abstract blueprint for domain-specific continual learning memory."
authors = ["Aadithya Vishnu Sajeev <axdithya@snath.ai>", "Vinay S <vinay@snath.ai>"]
maintainers = ["Aadithya Vishnu Sajeev <axdithya@snath.ai>", "Vinay S <vinay@snath.ai>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "brain", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
